--- a/project/web/logout.html
+++ b/project/web/logout.html
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="US-ASCII">
-    <title>Login Page</title>
+<!DOCTYPE html> 
+<html> 
+<head>  
+    <title>Logout Page</title>
+
+     
 </head>
+ 
 <body>
+  
+<form action="/LogoutServlet" method="get"> 
 
-<form action="/LogoutServlet" method="get">
+    <p>Confirm Logout?</p> 
 
-
-    <input type="submit" value="Logout">
-
+    <input type="submit" value="Logout">  
 
 </form>
-
+      
 </body>
+ 
 </html>
