validations for registration

--- a/project/web/login.html
+++ b/project/web/login.html
@@ -10,7 +10,7 @@
 
 
     <center>
-        <h1>Enter your Name and Password </h1><br>
+        <h1> Welcome to TravelHelper - A Hotel Review Website </h1><br>
     <table border=1>
         <tr><td>Enter Your Name :</td>
             <td><input type="text" name="user" value=""></td>
